- Add css_class to action links, to avoid changing name, it may result confusing, deprecate name setter
- Add buttons to check all and uncheck all on :select form ui for collection associations, and draggable lists (active_scaffold_checkbox_list)

= 3.7.8
- Rollback previous behaviour when submitting empty values, broken when default_value was added. Default value set in column is not used when trying to save empty value, DB default is used in that case, and save NULL when string is empty, as before.
- Support operators =, null and not null for :select search_ui, so it's possible to search for NULL with :select search UI.

= 3.7.7
- Fix usage with mongoid, broken on 3.7.5
- Support proc or lambda in label of action links
- Set successful to false when update_column is not authorized for the column
- Use action link's label for flash message when custom action is not authorized
- Add default_value to columns, so default_value can be defined in AS config, overriding DB default
- Fix caching query from association_klass_scoped in subforms, when returns different queries for the same association on different rows

= 3.7.6
- Respect :label_method set in form_ui_options on list.
- Fix grouped search for PostgreSQL
- Fix loading current search params when search form is open and store_user_settings is disabled

= 3.7.5
- Fix always show search for nested list on multi-level through associations
- Support changing step, min and max options with column options or search_ui options for decimal and integer search_ui
- Support null and not null comparators in date and datetime search_ui
- Support defining options_for_association_conditions, association_klass_scoped and active_scaffold_enum_options helpers prefixed with model name. Useful when clear_helpers is not called in ApplicationController.
- Fix class for columns with form_ui or css_class when refreshing column
- Eval after_config_callback proc in the context of AS config